# Data-Engineering-MLOps-Exam

./: .dockerignore  .gitignore  Dockerfile  MATCHING_LAYER_GUIDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  db-tests.yml  pages.yml  refresh-artifacts.yml  update_cves.yml
backend/: __init__.py
backend/API/: README.md  __init__.py  cpe_utils.py  db.py  infrastructure_extractor.py  ingest.py  matcher.py  models.py  update_summary.json
backend/API/reasoning/: __init__.py  client.py  context.py  exporter.py  prompts.py  schemas.py
backend/API/reasoning/output/: latest_raw_summary.json  latest_reasoning.json  latest_summary.json  reasoning_run_20260523_141457.json  reasoning_run_20260523_141709.json  reasoning_run_20260523_142912.json  (+3 more)
backend/API/scripts/: collect_artifacts.py  explore_db.py  init_sample_db.py  mark_patched.py  match_infrastructure.py  populate_db.py  query_findings.py  run_reasoning.py  update_db.py
backend/infrastructure/: company.json  sites.json
backend/infrastructure/assets/: network.json  servers.json  workstations.json
backend/infrastructure/security/: exposure.json
backend/infrastructure/users/: departments.json
frontend/: app.js  index.html  infrastructure.html  remediation.html
frontend/public/: app.js  index.html  infrastructure.html  remediation.html  styles.css
frontend/public/infrastructure/: company.json  departments.json  exposure.json  network.json  servers.json  sites.json  workstations.json
frontend/public/reasoning/: latest_summary.json
